chg: keepalive. Set preemt_delay.
When server starts up and keepalive initializes LVS it hangs for some
time (around 40s) on getrandom(). Thus, vrrp already grabed MASTER from
other node, but LVS still does not work. Thus, i should wait some time
before preemption.

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -14,7 +14,8 @@ vrrp_instance {{ v.instance }} {
         interface {{ v.iface }}
         version 2
         virtual_router_id {{ v.vrid }}
-        priority {% if v.state == 'MASTER' %} 255 {% else %} 100 {% endif %}
+        preempt_delay 60
+        priority {% if v.priority is defined %} {{ v.priority }} {% elif v.state == 'MASTER' %} 255 {% else %} 100 {% endif %}
 
         authentication {
                 auth_type PASS
