chg: vrrp. Use vrrp mac. Send vrrp announcements to unicast peer.

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -27,6 +27,13 @@ vrrp_instance {{ v.instance }} {
 {% endfor %}
         }
         #promote_secondaries
+        use_vmac {{ v.instance }}
+        # Required if `unicast_peer` is used together with `use_vmac` .
+        vmac_xmit_base
+        #unicast_src_ip {{ ansible_host }}
+        unicast_peer {
+                {{ v.unicast_peer | join('\n') | indent(16) }}
+        }
 }
 {% endfor %}
 
