--- a/tasks/director.yml
+++ b/tasks/director.yml
@@ -22,22 +22,29 @@
 
     - name: Build VRRP virtual IP dict
       set_fact:
-        vrrp_vips: >-
-          {{ vrrp_vips
-                + item.addresses | map('combine', {'iface': item.iface}) | list
-          }}
+        vrrp_vips: "{{ vrrp_vips + item.addresses | map(attribute='address') | list }}"
       loop: "{{ vrrp }}"
 
     - name: Check, that virtual IP addresses are correct
       assert:
         that:
-          - vrrp_vips | map(attribute='address') | unique | list | count
-            == vrrp_vips | count
+          - vrrp_vips | unique | count == vrrp_vips | count
         fail_msg: "VRRP virtual IPs: The same address has different iface or netmask somewhere."
 
     - name: Show VRRP virtual IPs list
       debug:
         var: vrrp_vips
+
+    - name: Build interfaces IPs list
+      set_fact:
+        interfaces_vips: >-
+          {{ interfaces_vips + [item] }}
+      when: not item.address in vrrp_vips
+      loop: "{{ lvs_director_vips }}"
+
+    - name: Show interfaces IPs list
+      debug:
+        var: interfaces_vips
 
     - name: Build LVS real servers list
       set_fact:
@@ -74,16 +81,18 @@
     - debug
 
 - block:
+    # In fact, i need iface aliases, because otherwise `resolvconf` will
+    # overwrite dns-nameservers info of main interface from the last alias
+    # (which has no dns nameservers defined).
     - name: Add LVS virtual addresses to interfaces
       blockinfile:
         path: '/etc/network/interfaces'
         block: |
-          {% for i in lvs_director_vips %}
-          {% if vrrp_vips | selectattr('address', 'equalto', i.address) | list | count == 0 %}
-          iface {{ i.iface }}  inet static
+          {% for i in interfaces_vips %}
+          auth {{ i.iface }}:{{ loop.index0 }}
+          iface {{ i.iface }}:{{ loop.index0 }}  inet static
             address {{ i.address }}
             netmask {{ i.netmask }}
-          {% endif %}
           {% endfor %}
 
     - name: Generate keepalived config
