new: vrrp. Define lvs daemon sync interface.

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -6,6 +6,8 @@ global_defs {
         notification_email_from {{ notification_email_from }}
 {% endif %}
         smtp_server 127.0.0.1
+        lvs_sync_daemon {{ vrrp[0].lvs_sync_iface }} {{ vrrp[0].instance }} {% if vrrp[0].lvs_sync_id is defined %} {{ vrrp[0].lvs_sync_id }} {% endif %}
+
 }
 
 {% for v in vrrp %}
