chg: ansible. Do not use `type` for lvs instance, just check for `fwmark` existence instead.

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -7,7 +7,7 @@ global_defs {
 }
 {% for g in lvs_director_groups2 %}
 
-{% if g.type != 'fwmark' %}
+{% if g.fwmark is not defined %}
 virtual_server_group {{ g.name }} {
 {% for i in g.virtual_addresses %}
         {{ i.address }} {{ g.port }}
@@ -15,18 +15,20 @@ virtual_server_group {{ g.name }} {
 }
 {% endif %}
 
-{% if g.type == 'fwmark' %}
+{% if g.fwmark is defined %}
 virtual_server fwmark {{ g.fwmark }} {
 {% else %}
 virtual_server group {{ g.name }} {
 {% endif %}
-
         lvs_sched   {{ g.lvs_sched }}
         lvs_method  {{ g.lvs_method }}
         protocol TCP
         delay_loop  {{ g.delay_loop }}
+{% if g.persistence_timeout is defined %}
+        persistence_timeout {{ g.persistence_timeout }}
+{% endif %}
 {% for r in g.real_addresses %}
-        real_server {{ r }} {% if g.type != 'fwmark' %} {{ g.port }} {% endif %} {
+        real_server {{ r }} {% if g.fwmark is not defined %} {{ g.port }} {% endif %} {
 {% if   g.node_check == 'ssl_get' %}
                 SSL_GET {
                         url {
