chg: ansible. Proper notification setup.

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -1,8 +1,10 @@
 global_defs {
         notification_email {
-                dmitrym@best-hosting.ru
+                {{ notification_email | join('\n') | indent(16) }}
         }
-        notification_email_from dmitriym@example7.com
+{% if notification_email_from is defined %}
+        notification_email_from {{ notification_email_from }}
+{% endif %}
         smtp_server 127.0.0.1
 }
 {% for g in lvs_director_groups2 %}
