--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -7,6 +7,28 @@ global_defs {
 {% endif %}
         smtp_server 127.0.0.1
 }
+
+{% for v in vrrp %}
+vrrp_instance {{ v.instance }} {
+        state {{ v.state }}
+        interface {{ v.iface }}
+        version 2
+        virtual_router_id {{ v.vrid }}
+        priority {% if v.state == 'MASTER' %} 255 {% else %} 100 {% endif %}
+
+        authentication {
+                auth_type PASS
+                auth_pass huy
+        }
+        virtual_ipaddress {
+{% for i in v.addresses %}
+                {{ i.address }}/{{ i.cidr }}
+{% endfor %}
+        }
+        #promote_secondaries
+}
+{% endfor %}
+
 {% for g in lvs_director_groups2 %}
 
 {% if g.fwmark is not defined %}
