--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,5 +2,6 @@
 
 # All virtual IPs of lvs director (from all groups).
 lvs_director_vips: []
+vrrp_vips: []
 lvs_director_groups2: []
 realserver_groups: []
