--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -6,7 +6,9 @@ global_defs {
         notification_email_from {{ notification_email_from }}
 {% endif %}
         smtp_server 127.0.0.1
+{% if vrrp[0] is defined %}
         lvs_sync_daemon {{ vrrp[0].lvs_sync_iface }} {{ vrrp[0].instance }} {% if vrrp[0].lvs_sync_id is defined %} {{ vrrp[0].lvs_sync_id }} {% endif %}
+{% endif %}
 
 }
 
