--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -41,7 +41,7 @@ vrrp_instance {{ v.instance }} {
 }
 {% endfor %}
 
-{% for g in lvs_director_groups2 %}
+{% for g in lvs_director %}
 
 {% if g.fwmark is not defined %}
 virtual_server_group {{ g.name }} {
