--- a/vars/main.yml
+++ b/vars/main.yml
@@ -9,8 +9,8 @@ lvs_realservers: []
 lvs_vips: []
 # All virtual IPs of a VRRP node.
 vrrp_vips: []
-# Virtual IPs to add to 'network/interfaces'. Note, that depending on server
-# role (director or node) IP will be added to different interfaces.
+# IPs to add to 'network/interfaces'. For LVS director here will be virtual
+# IPs, for real server - real server IPs.
 interfaces_vips: []
 
 lvs_director: []
