chg: ansible. Store addresses only in `lvs_director` config.
Nowhere in keepalived's 'virtual_server' config i need neither prefix
(netmask) nor interface. Thus, there is no need to store this in
ansible's lvs director config.

--- a/tasks/director.yml
+++ b/tasks/director.yml
@@ -57,7 +57,10 @@
           {{ lvs_director + [ item | combine(
                 { 'real_addresses': lvs_realservers
                     | selectattr('name', 'equalto', item.name)
-                    | map(attribute='address')
+                    | map(attribute='address') | ipaddr('address')
+                    | list
+                , 'virtual_addresses': item.virtual_addresses
+                    | map(attribute='address') | ipaddr('address')
                     | list
                 })
               ]
