--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -46,7 +46,7 @@ vrrp_instance {{ v.instance }} {
 {% if g.fwmark is not defined %}
 virtual_server_group {{ g.name }} {
 {% for i in g.virtual_addresses %}
-        {{ i.address | ipaddr('address') }} {{ g.port }}
+        {{ i }} {{ g.port }}
 {% endfor %}
 }
 {% endif %}
@@ -64,7 +64,7 @@ virtual_server group {{ g.name }} {
         persistence_timeout {{ g.persistence_timeout }}
 {% endif %}
 {% for r in g.real_addresses %}
-        real_server {{ r | ipaddr('address') }} {% if g.fwmark is not defined %} {{ g.port }} {% endif %} {
+        real_server {{ r }} {% if g.fwmark is not defined %} {{ g.port }} {% endif %} {
 {% if   g.node_check == 'ssl_get' %}
                 SSL_GET {
                         url {
