--- a/tasks/interfaces.yml
+++ b/tasks/interfaces.yml
@@ -1,18 +1,25 @@
 ---
 
 - block:
+    # Filter out addresses used to connect to host and addresses with
+    # _undefined_ interface.
     - name: interfaces | Build LVS node real IPs list
       set_fact:
         lvs_node_rips: "{{ lvs_node_rips + [item] }}"
-      when: not (item.address | ipaddr('address'))
-                  in  [ansible_host] + ansible_env.SSH_CONNECTION.split(' ')
+      when: item['iface'] is defined
+            and not (item.address | ipaddr('address'))
+                    in  [ansible_host] + ansible_env.SSH_CONNECTION.split(' ')
       loop: "{{ lvs_node_groups }}"
       # Fix syntax highlighting in vim'
 
     - name: interfaces | Build LVS director virtual IPs list
       set_fact:
-        lvs_director_vips: "{{ (lvs_director_vips + item.virtual_addresses) }}"
-      loop: "{{ lvs_director_groups }}"
+        lvs_director_vips: "{{ lvs_director_vips + [item.1] }}"
+      when: item.1['iface'] is defined
+            and not (item.1.address | ipaddr('address'))
+                    in  [ansible_host] + ansible_env.SSH_CONNECTION.split(' ')
+      loop: "{{ lvs_director_groups | subelements('virtual_addresses') }}"
+      # Fix syntax highlighting in vim"
 
     - name: interfaces | Build VRRP virtual IPs list
       set_fact:
@@ -67,6 +74,9 @@
     # I need iface aliases, because otherwise `resolvconf` will overwrite
     # dns-nameservers info of main interface from the last alias (which has no
     # dns nameservers defined).
+    # Also, empty line at the end of `block` is required, because otherwise
+    # task won't run at all, when there is _no_ IPs to define (thus, leaving
+    # previous (now probably incorrect) configuration as is).
     - name: interfaces | Add LVS IPs to interfaces
       blockinfile:
         path: '/etc/network/interfaces'
@@ -79,5 +89,6 @@
             address {{ addr | ipaddr('address') }}
             netmask {{ addr | ipaddr('netmask') }}
           {% endfor %}
+
       loop: "{{ interfaces_conf | dict2items }}"
 
