chg: ansible. Precreate elements for all host interfaces in 'interface_conf'.
And ansible will fail at runtime, if non-existent interface is
specified.

--- a/tasks/interfaces.yml
+++ b/tasks/interfaces.yml
@@ -61,7 +61,7 @@
           }}
       vars:
         cur_iface: >-
-          {{ interfaces_conf[item.iface] | default([]) }}
+          {{ interfaces_conf[item.iface] }}
       loop: "{{ interfaces_ips }}"
 
     - name: interfaces | Show interfaces conf
