chg: ansible. Separate tasks for configuring 'network/interfaces'.
And also now both LVS node and director use the same set of tasks for
adding addresses to 'network/interfaces'.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,3 +29,11 @@
   when: inventory_hostname in groups['lvs_node']
   tags:
     - lvs_node
+
+- block:
+    - name: Set up interfaces
+      import_tasks: interfaces.yml
+
+  tags:
+    - debug
+
