--- a/tasks/define.yml
+++ b/tasks/define.yml
@@ -25,10 +25,40 @@
       run_once: true
       loop: "{{ groups['lvs'] }}"
 
+    - name: huy
+      add_host:
+        name: "{{ item }}"
+        groups: >-
+          {{ [] | zip_longest(lvs_realservers
+                        | selectattr('host', 'equalto', item)
+                        | map(attribute='name') | unique | list
+                    , fillvalue='lvs_rs')
+                | map('join', '_') | list
+          }}
+      run_once: true
+      loop: "{{ groups['lvs'] }}"
+
+    - name: pizda
+      add_host:
+        name: "{{ item }}"
+        groups: >-
+          {{ [] | zip_longest(lvs_directors
+                        | selectattr('host', 'equalto', item)
+                        | map(attribute='name') | unique | list
+                    , fillvalue='lvs_ds')
+                | map('join', '_') | list
+          }}
+      run_once: true
+      loop: "{{ groups['lvs'] }}"
+
     - name: define | Show all LVS real servers
       debug:
         var: lvs_realservers
     - name: define | Show all LVS directors
       debug:
         var: lvs_directors
+
+    - name: huy2
+      debug:
+        var: group_names
 
