new: ansible. Write LVS dynamic groups to inventory file.
So, if i symlink this file to inventory directory, LVS dynamic groups
become static. Thus, i may use them at `ansible-playbook` cmd.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -55,3 +55,6 @@ lvs_node_groups: []
 #       lvs_sync_id: 138
 vrrp: []
 
+# File, where to store dynamic LVS groups.
+lvs_group_file: "{{ playbook_dir + '/lvs_groups.yml' }}"
+
