--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -34,6 +34,9 @@ vrrp_instance {{ v.instance }} {
         use_vmac {{ v.instance }}
         # Required if `unicast_peer` is used together with `use_vmac` .
         vmac_xmit_base
+        # Unicast VRRP announcements are sent _directly_ from vrrp interface,
+        # _without_ routing.  Thus, peer should be reachable through VRRP
+        # interface.
         #unicast_src_ip {{ ansible_host }}
         unicast_peer {
                 {{ v.unicast_peer | join('\n') | indent(16) }}
