new: ansible. Allow to specify http status code.
When http->https redirect is set up on http, rcode will be 301 or smth,
but not 200.

--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -82,7 +82,7 @@ virtual_server group {{ g.name }} {
                 HTTP_GET {
                         url {
                                 path /
-                                status_code 200
+                                status_code {{ g.http_rcode | default(200) }}
                         }
                         connect_port {{ g.port }}
                         connect_timeout {{ g.connect_timeout }}
