chg: vrrp. Require `unicast_src_ip` to be defined.
And guess `unicast_peer` list from `unicast_src_ip`-s of hosts in the
single vrrp instance.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -49,6 +49,7 @@ lvs_node_groups: []
 #       iface:    'ens3'
 #       addresses:
 #         - { address: 'VIP1' }
+#       unicast_src_ip: {{ ansible_host }}
 #       unicast_peer:
 #         - IP3
 #       lvs_sync_iface: 'ens6'
