--- a/templates/keepalived.conf
+++ b/templates/keepalived.conf
@@ -6,13 +6,13 @@ global_defs {
         notification_email_from {{ notification_email_from }}
 {% endif %}
         smtp_server 127.0.0.1
-{% if vrrp[0] is defined %}
-        lvs_sync_daemon {{ vrrp[0].lvs_sync_iface }} {{ vrrp[0].instance }} {% if vrrp[0].lvs_sync_id is defined %} {{ vrrp[0].lvs_sync_id }} {% endif %}
+{% if vrrp_conf[0] is defined %}
+        lvs_sync_daemon {{ vrrp_conf[0].lvs_sync_iface }} {{ vrrp_conf[0].instance }} {% if vrrp_conf[0].lvs_sync_id is defined %} {{ vrrp_conf[0].lvs_sync_id }} {% endif %}
 {% endif %}
 
 }
 
-{% for v in vrrp %}
+{% for v in vrrp_conf %}
 vrrp_instance {{ v.instance }} {
         state {{ v.state }}
         interface {{ v.iface }}
@@ -37,7 +37,7 @@ vrrp_instance {{ v.instance }} {
         # Unicast VRRP announcements are sent _directly_ from vrrp interface,
         # _without_ routing.  Thus, peer should be reachable through VRRP
         # interface.
-        #unicast_src_ip {{ ansible_host }}
+        unicast_src_ip {{ v.unicast_src_ip.address | ipaddr('address') }}
         unicast_peer {
                 {{ v.unicast_peer | join('\n') | indent(16) }}
         }
