--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,6 +4,8 @@
 lvs_directors: []
 # List of all per-host LVS real server configs.
 lvs_realservers: []
+# List of all per-host VRRP instance configs.
+vrrp_instances: []
 
 # All virtual IPs of LVS node.
 lvs_node_vips: []
@@ -11,7 +13,7 @@ lvs_node_vips: []
 lvs_node_rips: []
 # All virtual IPs of LVS director.
 lvs_director_vips: []
-# All virtual IPs of a VRRP node.
+# All virtual IPs of a VRRP node (probably, containing several instances).
 vrrp_vips: []
 # IPs to define in 'network/interfaces'. For LVS director here will be virtual
 # IPs, for real server - real server IPs.
@@ -22,6 +24,8 @@ interfaces_ips: []
 # List of vrrp interfaces.
 vrrp_interfaces: >
   {{ vrrp | map(attribute='instance') | list }}
+# Full vrrp config.
+vrrp_conf: []
 # Define interfaces config as dictionary, containing all interfaces, except
 # loopback and vrrp interfaces, and squashing all aliases into single main
 # interface entry.
@@ -33,7 +37,6 @@ interfaces_conf: >
          ) }}
 
 lvs_director: []
-
 
 # Correct representation of `groups` for converting into yaml and writing to
 # inventory file.
