--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,6 +37,7 @@
       tags:
         - lvs_node
         - lvs_director
+        - lvs_interfaces
 
   when: inventory_hostname in groups['lvs']
   tags:
